--- a/thesis.bib
+++ b/thesis.bib
@@ -1180,7 +1180,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jctc.8b01255},
 	url = {https://doi.org/10.1021/acs.jctc.8b01255},
 	year = 2019,
-	month = {feb},
+	month = Feb,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {15},
 	number = {4},
@@ -3113,7 +3113,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1098/rspa.1924.0081},
 	url = {https://doi.org/10.1098%2Frspa.1924.0081},
 	year = 1924,
-	month = {oct},
+	month = Oct,
 	publisher = {The Royal Society},
 	author= {Lennard-Jones, John Edward},
 	volume = {106},
@@ -3126,7 +3126,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1021/jp980946j},
 	url = {https://doi.org/10.1021%2Fjp980946j},
 	year = 1998,
-	month = {oct},
+	month = Oct,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {102},
 	number = {46},
@@ -3152,7 +3152,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1021/jp501495f},
 	url = {https://doi.org/10.1021%2Fjp501495f},
 	year = 2014,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {118},
 	number = {22},
@@ -3228,7 +3228,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1038/nature16961},
 	url = {https://doi.org/10.1038%2Fnature16961},
 	year = 2016,
-	month = {jan},
+	month = Jan,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {529},
 	number = {7587},
@@ -3241,7 +3241,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1038/nature24270},
 	url = {https://doi.org/10.1038%2Fnature24270},
 	year = 2017,
-	month = {oct},
+	month = Oct,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {550},
 	number = {7676},
@@ -3260,7 +3260,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1201/9781315139470},
 	url = {https://doi.org/10.1201%2F9781315139470},
 	year = 2017,
-	month = {oct},
+	month = Oct,
 	publisher = {Routledge},
 	author = {Leo Breiman and Jerome H. Friedman and Richard A. Olshen and Charles J. Stone},
 	title = {Classification And Regression Trees}
@@ -3269,7 +3269,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1093/biomet/85.2.363},
 	url = {https://doi.org/10.1093%2Fbiomet%2F85.2.363},
 	year = 1998,
-	month = {jun},
+	month = Jun,
 	publisher = {Oxford University Press ({OUP})},
 	volume = {85},
 	number = {2},
@@ -3282,7 +3282,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1007/bf00058655},
 	url = {https://doi.org/10.1007%2Fbf00058655},
 	year = 1996,
-	month = {aug},
+	month = Aug,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {24},
 	number = {2},
@@ -3335,7 +3335,7 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1006/jcss.1997.1504},
 	url = {https://doi.org/10.1006%2Fjcss.1997.1504},
 	year = 1997,
-	month = {aug},
+	month = Aug,
 	publisher = {Elsevier {BV}},
 	volume = {55},
 	number = {1},
@@ -3370,4 +3370,103 @@ URL = {https://doi.org/10.1137/0216006},
   author = {Jerome H. Friedman},
   title = {Stochastic gradient boosting},
   journal = {Computational Statistics {\&} Data Analysis}
+}
+@article{Banerjee2012,
+  doi = {10.1021/cg300274n},
+  url = {https://doi.org/10.1021/cg300274n},
+  year = {2012},
+  month = mar,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {12},
+  number = {5},
+  pages = {2162--2165},
+  author = {Debasis Banerjee and Zhijuan Zhang and Anna M. Plonka and Jing Li and John B. Parise},
+  title = {A Calcium Coordination Framework Having Permanent Porosity and High {CO}$_\text{2}$/{N}$_\text{2}$  Selectivity},
+  journal = {Crystal Growth {\&} Design}
+}
+@article{Banerjee2016hydro,
+  doi = {10.1039/c5sc03685b},
+  url = {https://doi.org/10.1039/c5sc03685b},
+  year = {2016},
+  publisher = {Royal Society of Chemistry ({RSC})},
+  volume = {7},
+  number = {1},
+  pages = {759--765},
+  author = {Debasis Banerjee and Hao Wang and Qihan Gong and Anna M. Plonka and Jacek Jagiello and Haohan Wu and William R. Woerner and Thomas J. Emge and David H. Olson and John B. Parise and Jing Li},
+  title = {Direct structural evidence of commensurate-to-incommensurate transition of hydrocarbon adsorption in a microporous metal organic framework},
+  journal = {Chemical Science}
+}
+@article{Yeh2012,
+  doi = {10.1039/c2ce05875h},
+  url = {https://doi.org/10.1039/c2ce05875h},
+  year = {2012},
+  publisher = {Royal Society of Chemistry ({RSC})},
+  volume = {14},
+  number = {4},
+  pages = {1219},
+  author = {Chun-Ting Yeh and Wei-Cheng Lin and Sheng-Han Lo and Ching-Che Kao and Chia-Her Lin and Chun-Chuen Yang},
+  title = {Microwave synthesis and gas sorption of calcium and strontium metal--organic frameworks with high thermal stability},
+  journal = {{CrystEngComm}}
+}
+@article{Stanton_2022,
+  doi = {10.1021/acs.jpclett.2c02131},
+  url = {https://doi.org/10.1021/acs.jpclett.2c02131},
+  year = {2022},
+  month = aug,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {13},
+  number = {34},
+  pages = {8150--8156},
+  author = {Robert Stanton and Emma Russell and Dhara J. Trivedi},
+  title = {Computational Investigations of Metal{\textendash}Organic Frameworks as Sorbents for {BTEX} Removal},
+  journal = {The Journal of Physical Chemistry Letters}
+}
+@article{Daglar_2022,
+  doi = {10.1021/acsami.2c08977},
+  url = {https://doi.org/10.1021/acsami.2c08977},
+  year = {2022},
+  month = jul,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {14},
+  number = {28},
+  pages = {32134--32148},
+  author = {Hilal Daglar and Seda Keskin},
+  title = {Combining Machine Learning and Molecular Simulations to Unlock Gas Separation Potentials of {MOF} Membranes and {MOF}/Polymer {MMMs}},
+  journal = {{ACS} Applied Materials {\&} Interfaces}
+}
+@article{Zhang_2001,
+  doi = {10.1039/b102210p},
+  url = {https://doi.org/10.1039/b102210p},
+  year = {2001},
+  publisher = {Royal Society of Chemistry ({RSC})},
+  number = {12},
+  pages = {1806--1808},
+  author = {Jing Zhang and Wenbin Lin and Zhen-Feng Chen and Ren-Gen Xiong and Brendan F. Abrahams and Hoong-Kun Fun},
+  title = {The first four-fold interpenetrating diamondoid framework that traps gaseous molecules: $\lbrace$Zn[trans-3-(4-pyridyl)acrylate]2$\cdotp$(trans-2-butene)$\rbrace$n},
+  journal = {Journal of the Chemical Society,  Dalton Transactions}
+}
+@article{Yin_2014,
+  doi = {10.1007/s40242-014-3501-8},
+  url = {https://doi.org/10.1007/s40242-014-3501-8},
+  year = {2014},
+  month = jan,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {30},
+  number = {1},
+  pages = {1--3},
+  author = {Xinbo Yin and Tiance An and Yang Wang and Lijuan Zhang},
+  title = {A novel 3D metal organic framework based on an Azolate ligand},
+  journal = {Chemical Research in Chinese Universities}
+}
+@article{Peikert_2012,
+  doi = {10.1039/c2cc36220a},
+  url = {https://doi.org/10.1039/c2cc36220a},
+  year = {2012},
+  publisher = {Royal Society of Chemistry ({RSC})},
+  volume = {48},
+  number = {91},
+  pages = {11196},
+  author = {Katharina Peikert and Frank Hoffmann and Michael Fr\"{o}ba},
+  title = {Amino substituted Cu3(btc)2: a new metal{\textendash}organic framework with a versatile functionality},
+  journal = {Chemical Communications}
 }
